plugins {
    id 'java'
    id 'com.gradleup.shadow' version '9.0.0-beta12'
}

group = 'com'
version = '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_25
    targetCompatibility = JavaVersion.VERSION_25
}

repositories {
    mavenCentral()
}

dependencies {
    testImplementation platform('org.junit:junit-bom:6.0.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    compileOnly 'org.projectlombok:lombok:1.18.38'
    annotationProcessor 'org.projectlombok:lombok:1.18.38'

    implementation "com.fasterxml.jackson.core:jackson-databind:2.20.0"

    testCompileOnly 'org.projectlombok:lombok:1.18.38'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.38'
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(JavaExec).configureEach {
    jvmArgs += ['--enable-preview']
}

jar {
    manifest {
        attributes(
                'Main-Class': 'Main',
                'Implementation-Title': rootProject.name,
                'Implementation-Version': version
        )
    }
}

shadowJar {
    archiveBaseName.set(rootProject.name)
    archiveClassifier.set('all')
    archiveVersion.set(version)

    manifest {
        attributes(
                'Main-Class': 'Main',
                'Implementation-Title': rootProject.name,
                'Implementation-Version': version
        )
    }

    mergeServiceFiles()
}

test {
    useJUnitPlatform()
    jvmArgs += ['--enable-preview']
}